--- a/src/assets/style/custom/_buttons.scss
+++ b/src/assets/style/custom/_buttons.scss
@@ -13,7 +13,27 @@
     color: $white;
   }
 }
-
+.icon-btn {
+  padding: 0;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  &:hover {
+    color: #ffffff;
+  }
+  .rounded-pill {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    font-size: 25px;
+  }
+  i {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 // custom-color
 $types: (
   blue: #5274cd,
